add output model and logic

--- a/ComponentsHub/Properties/config.json
+++ b/ComponentsHub/Properties/config.json
@@ -5,8 +5,8 @@
       "id": 139728
     },
     {
-      "name": "TPS54260DGQR",
-      "id": 139728
+      "name": "STM32G030C8T6",
+      "id": 517870
     }
   ]
 }
