--- a/ComponentsHub/Properties/launchSettings.json
+++ b/ComponentsHub/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "anonymousAuthentication": false,
     "iisExpress": {
       "applicationUrl": "http://localhost:63489",
       "sslPort": 0
@@ -18,7 +18,7 @@
     "ComponentsHub": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:3000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
