--- a/ComponentsHub/Properties/config.json
+++ b/ComponentsHub/Properties/config.json
@@ -1,4 +1,6 @@
 {
+  
+  
   "components": [
     {
       "name": "TPS54260DGQR",
@@ -7,6 +9,10 @@
     {
       "name": "STM32G030C8T6",
       "id": 517870
+    },
+    {
+      "name": "DG250-3.5-04P-11-01A(H)",
+      "id": 540109
     }
   ]
 }
