--- a/ComponentsHub/Properties/launchSettings.json
+++ b/ComponentsHub/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "iisSettings": {
     "windowsAuthentication": false,
-    "anonymousAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:63489",
       "sslPort": 0
